[package]
name = "trundle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trundle-server"
path = "src/server.rs"

[[bin]]
name = "trundle-client"
path = "src/client.rs"

[dependencies]
prost = "0.12.3"
sha256 = "1.4.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10"
